adjusted the table on home.html and added new styling, made some headers links in place of back buttons, minor styling on cards, to fix contrast issues, trying to streamline html

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,7 +69,7 @@ p.alert{
 }
 .card .card-action a{
 	font-family: 'Asap', sans-serif;
-	color:white !important;
+	color: #00838f !important;
 }
 
 /*  #########  Bread Crumbs  ##############*/
@@ -189,7 +189,7 @@ color:red;
 .collection .collection-item:hover{
 	background-color: white;
 	cursor: pointer;
-	background-color: #e0f7fa;
+	background-color: #eeeeee;
 	transition: 1s;
 }
 
