--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -2273,7 +2273,7 @@ td, th {
 
 .collection {
   margin: 0.5rem 0 1rem 0;
-  border: 1px solid #e0e0e0;
+  border: 1px hidden #e0e0e0;
   border-radius: 2px;
   overflow: hidden;
   position: relative; }
@@ -2282,7 +2282,7 @@ td, th {
     line-height: 1.5rem;
     padding: 10px 20px;
     margin: 0;
-    border-bottom: 1px solid #e0e0e0; }
+    border-bottom: 1px hidden #e0e0e0; }
     .collection .collection-item.avatar {
       min-height: 84px;
       padding-left: 72px;
